@@ -16,7 +16,7 @@
    Copyright (C) 1999-2004 Karl Heinz Kremer <khk@khk.net>
 */
 
-#define	SANE_EPSON_VERSION	"SANE Epson Backend v0.2.43 - 2004-10-16"
+#define	SANE_EPSON_VERSION	"SANE Epson Backend v0.2.44 - 2004-12-18"
 #define SANE_EPSON_BUILD	243
 
 /*
@@ -59,6 +59,7 @@
    If you do not wish that, delete this exception notice.  */
 
 /*
+   2004-12-18   Added USB IDs for CX-4600 and CX-3650
    2004-10-16   Added USB ID for Expression 10000XL
    2004-05-08   Disable feed() for Perfection1640
    2004-02-08   Reformat all source code with "indent -bli0"
